// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TVHViewer type 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "__typename": "TvHelperViewer",
      "username": "tito",
    },
  },
}
`;

exports[`renders Unautorized type 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "__typename": "Unauthorized",
    },
  },
}
`;
